changed color scheme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>Rakesh Pandey</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Official portfolio of Rakesh Pandey. A small town boy from Bihar who is incessantly working to create affordable and effective healthcare.">
+    <meta name="keywords" content="Bihari, bravo, bravo pharma, london nri,invest,investing,investor">
     <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     
     
